[gd_scene load_steps=2 format=3 uid="uid://cwddm8s7evxkd"]

[ext_resource type="Script" uid="uid://db74qakdins26" path="res://scenes/player/dash_scene.gd" id="1_4mrep"]

[node name="DashScene" type="Sprite2D"]
script = ExtResource("1_4mrep")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
autostart = true

[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
